Update notebooks to 2.6

--- a/Session_1/1_getting_started_with_Jupyter_Notebooks.ipynb
+++ b/Session_1/1_getting_started_with_Jupyter_Notebooks.ipynb
@@ -21,7 +21,7 @@
     "* [Goal](#Goal)\n",
     "\n",
     "\n",
-    "* [Navigating the Notebook's cell-based interface](#Navigating-the-Notebook's-browser-based-interface)\n",
+    "* [Navigating the Notebook's cell-based interface](#Navigating-the-Notebook's-cell-based-interface)\n",
     "\n",
     "\n",
     "* [Markdown basics](#Markdown-basics)\n",
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The aim of this notebook is to get you up-and-running quickly with Jupyter Notebooks.  To be effective, you should become familar with the \n",
+    "The aim of this notebook is to get you up-and-running quickly with Jupyter Notebooks.  To be effective, you should become familiar with the \n",
     "\n",
     "* Notebook's browser-based interface\n",
     "\n",
@@ -68,7 +68,7 @@
     "\n",
     "A Notebook consists of cells that are used to write code, or to record explanatory notes and comments. Notebooks are working documents that can be modified. It is good practice to save a copy of the original notebook before you start to edit. \n",
     "\n",
-    "You can do this now from the file menu by selecting **Make a copy... **. Continue this guide from the new copy. \n"
+    "You can do this now from the Notebook Menubar by selecting **File > Make a copy... **. Continue this guide from the new copy. \n"
    ]
   },
   {
@@ -86,7 +86,7 @@
     "\n",
     "![Notebook User Interface Tour](./images/Notebook_Tour.png)\n",
     "\n",
-    "From the  menu toolbar, first select `Help` and then select the `User Interface Tour` as shown in the diagram above.  Using a mouse, or the right and left keyboard keys, complete the short overview of the Notebook.\n",
+    "From the Notebook Menubar, first select `Help` and then select the `User Interface Tour` as shown in the diagram above.  Using a mouse, or the right and left keyboard keys, complete the short overview of the Notebook.\n",
     "\n",
     "The Notebook can be navigated using the tool and menu bars or using keyboard shortcuts.  A Notebook command palette with integrated search is activated by selecting the button with the keyboard option on the toolbar, as shown below,\n",
     "\n",
@@ -95,17 +95,6 @@
     "or by simultaneously pressing the `Ctrl` + `Shift` + `p` keys.  The command palette itself is shown below:\n",
     "\n",
     "![Command Palette](./images/Command_Palette.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "\n",
-    "[Contents](#Contents)\n",
-    "\n",
-    "----"
    ]
   },
   {
@@ -144,10 +133,9 @@
     "[Lists](#Lists)  \n",
     "[Links](#Links)  \n",
     "[Images](#Images)  \n",
-    "[Code and Syntax Highlighting](#code)  \n",
+    "[Python script highlighting](#Python-script-highlighting)  \n",
     "[Tables](#Tables)  \n",
     "[Blockquotes](#Blockquotes)  \n",
-    "[Inline HTML](#Inline-HTML)  \n",
     "[Horizontal Rule](#Horizontal-Rule)  \n",
     "[Line Breaks](#Line-Breaks)  "
    ]
@@ -219,8 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Google](https://www.google.com)\n",
-    "\n"
+    "[Google](https://www.google.com)"
    ]
   },
   {
@@ -234,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![jupyter](http://jupyter.org/assets/nav_logo.svg)\n"
+    "![jupyter](http://jupyter.org/assets/nav_logo.svg)"
    ]
   },
   {
@@ -365,45 +352,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"400\"\n",
-       "            height=\"300\"\n",
-       "            src=\"https://www.youtube.com/embed/7eQYZGf9--0\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x316540d0>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import YouTubeVideo\n",
     "YouTubeVideo('7eQYZGf9--0')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "\n",
-    "[Contents](#Contents)\n",
-    "\n",
-    "----"
    ]
   },
   {
@@ -472,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
