--- a/Session_1/2_getting_started_with_IPython.ipynb
+++ b/Session_1/2_getting_started_with_IPython.ipynb
@@ -36,7 +36,7 @@
     "The aim of this notebook is to become familiar with some of the most important capabilities of the IPython (Interactive Python) REPL.  \n",
     "Note that term `REPL` is synonymous with `shell`:\n",
     "\n",
-    ">A read–eval–print loop (REPL), also known as an interactive top level or language shell, is a simple, interactive computer programming environment that takes single user inputs (i.e. single expressions), evaluates them, and returns the result to the user.\n",
+    ">A **read–eval–print loop** (REPL), also termed an **interactive toplevel** or **language shell**, is a simple interactive computer programming environment that takes single user inputs, executes them, and returns the result to the user; a program written in a REPL environment is executed piecewise.\n",
     "\n",
     "[wikipedia](https://en.wikipedia.org/wiki/Read–eval–print_loop)"
    ]
@@ -125,11 +125,9 @@
     "IPython -- An enhanced Interactive Python\n",
     "=========================================\n",
     "\n",
-    "IPython offers a combination of convenient shell features, special commands\n",
-    "and a history mechanism for both input (command history) and output (results\n",
-    "caching, similar to Mathematica). It is intended to be a fully compatible\n",
-    "replacement for the standard Python interpreter, while offering vastly\n",
-    "improved functionality and flexibility.\n",
+    "IPython offers a fully compatible replacement for the standard Python\n",
+    "interpreter, with convenient shell features, special commands, command\n",
+    "history mechanism and output results caching.\n",
     "\n",
     "At your system command line, type 'ipython -h' to see the command line\n",
     "options available. This document only describes interactive features.\n",
@@ -137,9 +135,8 @@
     "MAIN FEATURES\n",
     "-------------\n",
     "\n",
-    "* Access to the standard Python help. As of Python 2.1, a help system is\n",
-    "  available with access to object docstrings and the Python manuals. Simply\n",
-    "  type 'help' (no quotes) to access it.\n",
+    "* Access to the standard Python help with object docstrings and the Python\n",
+    "  manuals. Simply type 'help' (no quotes) to invoke it.\n",
     "\n",
     "* Magic commands: type %magic for information on the magic subsystem.\n",
     "\n",
@@ -175,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The %quickref command is one example of an IPython _magic function_.  IPython _magics_ are special functions that are a key part of the IPython package. Much of the power of the IPython interpreter is accessed by invoking the appropriate magics. We will see many such examples as we progress"
+    "The `%quickref` command is one example of an IPython _magic function_.  IPython _magics_ are special functions that are a key part of the IPython package. Much of the power of the IPython interpreter is accessed by invoking the appropriate magics. We will see many such examples as we progress"
    ]
   },
   {
@@ -302,7 +299,7 @@
     "\n",
     "If the given object is a class, it will print both the class and the\n",
     "constructor docstrings.\n",
-    "File:      /usr/local/lib/python3.4/dist-packages/IPython/core/magics/namespace.py\n",
+    "File:      /usr/lib/python3/dist-packages/IPython/core/magics/namespace.py\n",
     "```"
    ]
   },
@@ -432,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
