--- a/Session_2/1_pmod_grove_tmp.ipynb
+++ b/Session_2/1_pmod_grove_tmp.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "The external pins of these interfaces are connected to PL pins. This means the logic to control an external peripheral must be implemented in the PL in an Overlay. Pmods, Grove and Arduino peripherals can be used with IOPs in the *base* Overlay for the PYNQ-Z1 and PYNQ-Z2. \n",
     "\n",
-    "This notebook will show how to use the [Grove Temperature Sensor v1.2](http://wiki.seeedstudio.com/Grove-Temperature_Sensor_V1.2/) with the Grove I2C  ADC [Grove I2C ADC ](http://wiki.seeedstudio.com/Grove-I2C_ADC/) on the PYNQ-Z1 or PYNQ-Z2 board. The Grove Temperature sensor produces an analog signal, and requires an ADC. You will also see how to plot a graph using _matplotlib_, a Python package for 2D plots. \n",
+    "This notebook will show how to use the [Grove Temperature Sensor v1.2](http://wiki.seeedstudio.com/Grove-Temperature_Sensor_V1.2/) with the Grove I2C  ADC [Grove I2C ADC ](http://wiki.seeedstudio.com/Grove-I2C_ADC/) on the PYNQ-Z1 or PYNQ-Z2 board. The Grove Temperature sensor produces an analog signal, and requires an Analog to Digital Converter (ADC). You will also see how to plot a graph using _matplotlib_, a Python package for 2D plots. \n",
     "\n",
     "A Grove Temperature sensor, a Grove ADC, and a Pynq Grove Adapter Adapter are required for this notebook example (a Pynq Arduino adapter could also be used instead of the Pynq Grove Adapter).\n",
     "\n",
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "temperature = tmp.read()\n",
-    "print(float(\"{0:.2f}\".format(temperature)),'degree Celsius')"
+    "print(\"{0:.2f} degree Celsius\".format(temperature))"
    ]
   },
   {
@@ -128,7 +128,8 @@
     "tmp.set_log_interval_ms(ms_delay)\n",
     "tmp.start_log()\n",
     "time.sleep(delay_s) # Change input during this time\n",
-    "tmp_log = tmp.get_log()"
+    "tmp_log = tmp.get_log()\n",
+    "print(\"Logged {} samples\".format(len(tmp_log)))"
    ]
   },
   {
@@ -151,6 +152,8 @@
     "import matplotlib.pyplot as plt\n",
     "plt.plot(range(len(tmp_log)), tmp_log, 'ro')\n",
     "plt.title('Grove Temperature Plot')\n",
+    "plt.xlabel('Sample')\n",
+    "plt.ylabel('Temperature (Celsius)')\n",
     "min_tmp_log = min(tmp_log)\n",
     "max_tmp_log = max(tmp_log)\n",
     "plt.axis([0, len(tmp_log), min_tmp_log, max_tmp_log])\n",
@@ -174,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
