--- a/Session_2/2_pmod_oled_example.ipynb
+++ b/Session_2/2_pmod_oled_example.ipynb
@@ -9,7 +9,7 @@
     "## Contents\n",
     "\n",
     "* [Introduction](#Introduction)\n",
-    "* [Setup the board and PmodOLED](#Setup-the-board-and-PmodOLED)\n",
+    "* [Setup the board and PmodOLED](#Setup-the-board-and-PmodOLED,-and-load-the-overlay)\n",
     "* [Write to the PmodOLED](#Write-to-the-PmodOLED)\n",
     "* [Draw some patterns](#Draw-some-patterns)\n",
     "* [Create a new Python function](#Create-a-new-Python-function)\n",
@@ -18,13 +18,15 @@
     "----\n",
     "\n",
     "## Introduction\n",
-    "This demonstration shows how to use the PmodOLED using the PYNQ-Z1 or PYNQ-Z2 board.\n",
+    "This demonstration shows how to use the [PmodOLED](https://reference.digilentinc.com/reference/pmod/pmodoled/start) using the PYNQ-Z1 or PYNQ-Z2 board.\n",
     "\n",
     "----\n",
     "\n",
     "## Setup the board and PmodOLED, and load the overlay\n",
     "### Connect the PmodOLED to the board.\n",
-    "In this example the ***PmodOLED*** should be connected to ***PMODA.***"
+    "In this example the ***PmodOLED*** should be connected to ***PMODA.***\n",
+    "\n",
+    "Download the base overlay"
    ]
   },
   {
@@ -35,6 +37,13 @@
    "source": [
     "from pynq.overlays.base import BaseOverlay\n",
     "base = BaseOverlay(\"base.bit\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create an oled instance"
    ]
   },
   {
@@ -120,7 +129,9 @@
     "hostname = !hostname\n",
     "#Get primary IP address\n",
     "ip_addr = !hostname  -I | cut -f1 -d' '\n",
-    "pmod_oled.write(hostname[0] + \"\\nIP:\" + ip_addr[0])"
+    "#Get CPU architecture\n",
+    "cpu = !cat /proc/cpuinfo | grep \"model name\" | head -n 1 | cut -f3 -d' '\n",
+    "pmod_oled.write(hostname[0] + \"\\nIP:\" + ip_addr[0] + '\\nCPU: ' + cpu[0])"
    ]
   },
   {
@@ -260,14 +271,14 @@
     "def draw_circle(cx,cy, r):\n",
     "    for i in range (0, 360):\n",
     "        x = cx + r * math.cos(i*math.pi/180)\n",
-    "        if(x > 127):\n",
+    "        if x > 127:\n",
     "            x = 127\n",
-    "        if(x<0):\n",
+    "        if x < 0:\n",
     "            x = 0\n",
     "        y = cy + r * math.sin(i*math.pi/180)\n",
-    "        if(y>31):\n",
+    "        if y > 31:\n",
     "            y = 31\n",
-    "        if(y<0):\n",
+    "        if y < 0:\n",
     "            y = 0\n",
     "        pmod_oled.draw_line(int(x),int(y),int(x+1),int(y))"
    ]
@@ -377,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
