--- a/Session_2/3_pmod_grove_ledbar.ipynb
+++ b/Session_2/3_pmod_grove_ledbar.ipynb
@@ -9,13 +9,13 @@
     "----\n",
     "* [Introduction](#Introduction)\n",
     "* [Setup the board](#Setup-the-board)\n",
-    "* [Setup and read from the sensor](#Setup-and-read-from-the-sensor)\n",
-    "* [Display a graph](#Display-a-graph)\n",
+    "* [Setup LED Bar](#Setup-LED-Bar)\n",
+    "* [Use the LED Bar](#Use-the-LED-Bar)\n",
     "\n",
     "----\n",
     "## Introduction\n",
     "\n",
-    "This examples shows how to use the Grove LED bar on the PYNQ-Z1 or PYNQ-Z2 board.\n",
+    "This example shows how to use the Grove LED bar on the PYNQ-Z1 or PYNQ-Z2 board.\n",
     "\n",
     "A [Grove LED Bar](http://www.seeedstudio.com/depot/Grove-LED-Bar-v20-p-2474.html) and Pynq Grove Adapter are required.\n",
     "\n",
@@ -37,6 +37,17 @@
    "source": [
     "from pynq.overlays.base import BaseOverlay\n",
     "base = BaseOverlay(\"base.bit\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup LED Bar\n",
+    "1. Connect the ***pmod2grove*** to ***PMODB***. \n",
+    "2. Connect ***LED Bar*** to port ***G1*** of the Pynq Grove Adapter.\n",
+    "\n",
+    "## Use the LED Bar"
    ]
   },
   {
@@ -176,20 +187,20 @@
     "MAX_BTNS = 4\n",
     "\n",
     "btns = [base.buttons[index] for index in range(4)] \n",
-    "i = 1\n",
+    "i = 0\n",
     "ledbar.reset()\n",
     "\n",
     "done = False\n",
     "while not done:\n",
-    "    if (btns[0].read()==1):\n",
+    "    if btns[0].read() == 1:\n",
     "        sleep(0.2)\n",
+    "        i = min(i+1,10)\n",
     "        ledbar.write_level(i,2,1)\n",
-    "        i = min(i+1,9)\n",
-    "    elif (btns[1].read()==1):\n",
+    "    elif btns[1].read() == 1:\n",
     "        sleep(0.2)\n",
     "        i = max(i-1,0)\n",
     "        ledbar.write_level(i,2,1)\n",
-    "    elif (btns[3].read()==1):\n",
+    "    elif btns[3].read() == 1:\n",
     "        ledbar.reset()\n",
     "        done = True"
    ]
@@ -211,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
