--- a/Session_3/1_wavedrom_tutorial.ipynb
+++ b/Session_3/1_wavedrom_tutorial.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A simple function to add wavedrom diagrams into an jupyter notebook. It utilises the wavedrom java script library.  \n",
+    "A simple function to add wavedrom diagrams into a jupyter notebook. It utilizes the wavedrom java script library.  \n",
     "\n",
     "<font color=\"DodgerBlue\">**Example usage:**</font> \n",
     "```python\n",
@@ -75,15 +75,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Notes on waveform specification__\n",
-    "\n",
-    "![](./images/waveform_spec_format0.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Step 3: Adding more signals to the waveform"
    ]
   },
@@ -103,15 +94,6 @@
     "           'head': {'text': 'Pattern'}}\n",
     "\n",
     "draw_wavedrom(pattern)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__Notes on waveform specification__\n",
-    "\n",
-    "![](./images/waveform_spec_format1.png)"
    ]
   },
   {
@@ -142,15 +124,6 @@
     "                 'head': {'text': 'Pattern'}}\n",
     "\n",
     "draw_wavedrom(pattern_group)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__Notes on waveform specification__\n",
-    "\n",
-    "![](./images/waveform_spec_format2.png)"
    ]
   },
   {
@@ -226,16 +199,6 @@
    "metadata": {},
    "source": [
     "**Note:** Since there are no captured samples at this moment, the analysis group will be empty."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__Notes on the enhanced WaveJSON specification format__\n",
-    "\n",
-    "\n",
-    "![](./images/waveform_spec_format3.png)"
    ]
   },
   {
@@ -349,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
