--- a/Session_3/4_fsm_generator.ipynb
+++ b/Session_3/4_fsm_generator.ipynb
@@ -61,7 +61,7 @@
     "                            ['01', 'S6', 'S7', '101'],\n",
     "                            ['00', 'S6', 'S5', '101'],\n",
     "                            ['01', 'S7', 'S0', '100'],\n",
-    "                            ['00', 'S7', 'S6', '100'],                            \n",
+    "                            ['00', 'S7', 'S6', '100'],\n",
     "                            ['1-', '*',  'S0', '']]}   "
    ]
   },
@@ -149,8 +149,11 @@
    "source": [
     "__Set up the FSM inputs on the PYNQ board__\n",
     "* Check that the reset and direction inputs are correctly wired on the PYNQ board, as shown below:\n",
-    "    * Connect D0 to GND\n",
-    "    * Connect D1 to 3.3V\n",
+    "\n",
+    "|  | PYNQ-Z1 | PYNQ-Z2 |\n",
+    "|--|---------|---------|\n",
+    "| GND | D0 | AR0 |\n",
+    "| 3.3V | D1 | AR1 |\n",
     "\n",
     "![](./images/fsm_wiring.png)"
    ]
@@ -164,12 +167,12 @@
     "* The 3-bit Gray code counter is an up-down, wrap-around counter that will count from states 000 to 100 in either ascending or descending order    \n",
     "\n",
     "\n",
-    "* The reset input is connected to pin D0 of the Arduino connector\n",
+    "* The reset input is connected to pin D0/AR0 of the Arduino connector\n",
     "    * Connect the reset input to GND for normal operation \n",
     "    * When the reset input is set to logic 1 (3.3V), the counter resets to state 000\n",
     "    \n",
     "\n",
-    "* The direction input is connected to pin D1 of the Arduino connector\n",
+    "* The direction input is connected to pin D1/AR1 of the Arduino connector\n",
     "    * When the direction is set to logic 0, the counter counts down\n",
     "    * Conversely, when the direction input is set to logic 1, the counter counts up"
    ]
@@ -248,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
