--- a/Session_3/5_microblaze_programming.ipynb
+++ b/Session_3/5_microblaze_programming.ipynb
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Arrays can be passed in two different ways. If a type other than `void` is provided then the data will be copied to the MicroBlaze and if non-`const` the data will be copied back as well. And iterable and modifiable object can be used as the argument in this case."
+    "Arrays can be passed in two different ways. If a type other than `void` is provided then the data will be copied to the MicroBlaze and if non-`const` the data will be copied back as well. An iterable and modifiable object can be used as the argument in this case."
    ]
   },
   {
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally we can pass a `void` pointer which will allow the Microblaze to directly access the memory of the host processing system for transferring large quantities of data. In Python these blocks of memory should be allocated using the `Xlnk.cma_array` function and it is the responsibility of the programmer to make sure that the Python and C code agree on the types used."
+    "Finally we can pass a `void` pointer which will allow the Microblaze to directly access the memory of the host processing system for transferring large quantities of data. In Python these blocks of memory should be allocated using the `pynq.allocate` function and it is the responsibility of the programmer to make sure that the Python and C code agree on the types used."
    ]
   },
   {
@@ -158,10 +158,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pynq import Xlnk\n",
-    "allocator = Xlnk()\n",
+    "from pynq import allocate\n",
     "\n",
-    "buffer = allocator.cma_array(shape=(1024 * 1024), dtype='i4')\n",
+    "buffer = allocate(shape=(1024 * 1024), dtype='i4')\n",
     "buffer[:] = range(1024*1024)\n",
     "\n",
     "big_sum(buffer, len(buffer))"
@@ -286,7 +285,7 @@
    "source": [
     "## Creating class-like objects\n",
     "\n",
-    "In the C code `typedef`s can be used to create psuedo classes in Python. If you have a `typedef` called `my_class` then any functions that being `my_class_` are assumed to be associated with it. If one of those functions takes `my_class` as the first argument it is taken to be equivalent to `self`. Note that the `typedef` can only ultimately refer a primitive type. The following example does some basic modular arithmetic base 53 using this idiom."
+    "In the C code `typedef`s can be used to create pseudo classes in Python. If you have a `typedef` called `my_class` then any functions that being `my_class_` are assumed to be associated with it. If one of those functions takes `my_class` as the first argument it is taken to be equivalent to `self`. Note that the `typedef` can only ultimately refer a primitive type. The following example does some basic modular arithmetic base 53 using this idiom."
    ]
   },
   {
@@ -354,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
