--- a/Session_4/1_ps_gpio.ipynb
+++ b/Session_4/1_ps_gpio.ipynb
@@ -24,11 +24,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "GPIO Map: \n",
+    "### GPIO Map\n",
     "\n",
-    "* GPIO 0 - 3: Buttons\n",
-    "* GPIO 4 - 5: Switches\n",
-    "* GPIO 6 - 9: LEDs"
+    "|  GPIO | Peripheral |\n",
+    "|-------|------------|\n",
+    "| 0 - 3 | Buttons    |\n",
+    "| 4 - 5 | Switches   |\n",
+    "| 6 - 9 | LEDs       |"
    ]
   },
   {
@@ -220,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Reset the LEDs"
+    "Turn off the LEDs"
    ]
   },
   {
@@ -252,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "while(switch0.read() is 1):\n",
+    "while(switch0.read() == 1):\n",
     "    led0.write(button0.read())\n",
     "    led1.write(button1.read())\n",
     "    led2.write(button2.read())\n",
