--- a/Session_4/3_mmio.ipynb
+++ b/Session_4/3_mmio.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "## Hardware design\n",
     "\n",
-    "This example uses the same bitstream from the previous example with three AXI GPIO controllers connected to the LEDs, buttons, and switches. While there are PYNQ drivers available to read and write the AXI GPIO LEDs, switches, for demonstration purposes the AXI GPIO controllers will be used to show how the PYNQ MMIO class can be used. \n",
+    "This example uses the same bitstream from the previous example with three AXI GPIO controllers connected to the LEDs, buttons, and switches. While there are PYNQ drivers available to read and write the AXI GPIO LEDs, switches and buttons for demonstration purposes the AXI GPIO controllers will be used to show how the PYNQ MMIO class can be used. \n",
     "\n",
     "![AXI GPIO Design](./images/axi_gpio_design.png \"AXI GPIO Design\")\n",
     "\n",
@@ -50,7 +50,7 @@
     "\n",
     "An AXI GPIO controller has two channels. In the design, only 1 channel of each AXI controller is used (as described in the previous lab). We will only use two registers:\n",
     "\n",
-    "The data register is mapped to offset 0x0, and the tristate register is mapped to offset 0x4. To use an AXI GPIO, the tri-state register must be set to configure the IP as input or output. The data register can be read or written to. For example, the AXI GPIO connected to the LEDs sets the tri-state register to configure the IP as an output. The LEDs will turn on or off corresponding to the value written to the data register. For the buttons, or switches, the IP is configured as *input* and the value in the data register will be the value coresponding to the position of the switches or buttons. \n",
+    "The data register is mapped to offset 0x0, and the tri-state register is mapped to offset 0x4. To use an AXI GPIO, the tri-state register must be set to configure the IP as input or output. The data register can be read or written to. For example, the AXI GPIO connected to the LEDs sets the tri-state register to configure the IP as an output. The LEDs will turn on or off corresponding to the value written to the data register. For the buttons, or switches, the IP is configured as *input* and the value in the data register will be the value corresponding to the position of the switches or buttons. \n",
     "\n",
     "In the following example, 3 MMIO instances will be created corresponding  to each AXI GPIO. \n",
     "\n",
@@ -67,16 +67,16 @@
     "switches_address = axi_gpio_design.ip_dict['switches']['phys_addr']\n",
     "leds_address = axi_gpio_design.ip_dict['leds']['phys_addr']\n",
     "\n",
-    "print(\"Physical address of button: 0x\" + format(buttons_address, '02x'))\n",
-    "print(\"Physical address of button: 0x\" + format(switches_address, '02x'))\n",
-    "print(\"Physical address of button: 0x\" + format(leds_address, '02x'))"
+    "print(\"Physical address of buttons:  0x\" + format(buttons_address, '02x'))\n",
+    "print(\"Physical address of switches: 0x\" + format(switches_address, '02x'))\n",
+    "print(\"Physical address of LEDs:     0x\" + format(leds_address, '02x'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Controlling the switches and push-buttons (again!)\n",
+    "### 2. Controlling the switches and push-buttons (again!)\n",
     "\n",
     "An `MMIO` instance is created with an address and optionally a range. The range specifies the range of addresses that can be accessed from the base address. Care must be taken when reading and writing addresses in the system that they physically exist. Reading or writing to location that is not accessible can cause the system to hang.  "
    ]
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Controlling the LEDs (again!)\n",
+    "### 3. Controlling the LEDs (again!)\n",
     "\n",
     "The LEDs can be used in a similar way, this time `0x0` is written to the tri-state register to configure the IO as output. "
    ]
@@ -190,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "while((switches.read(0x0) & 0x1) is 1):\n",
+    "while((switches.read(0x0) & 0x1) == 1):\n",
     "    leds.write(0x0, buttons.read(0x0))"
    ]
   }
