--- a/Session_4/5_allocate_with_pl_master_example.ipynb
+++ b/Session_4/5_allocate_with_pl_master_example.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# PL access to PS DRAM \n",
     "\n",
-    "In this notebook, the PYNQ Xlnk class will be used to allocate a memory buffer in the DDR memory. The physical address of the memory will be passed to the PL, in this case to an IOP. The IOP has a connection to the PS DRAM. An application will run on the IOP to modify the contents of the memory buffer in the PS DRAM. \n",
+    "In this notebook, the PYNQ allocate class will be used to allocate a memory buffer in the DDR memory. The physical address of the memory will be passed to the PL, in this case to an IOP. The IOP has a connection to the PS DRAM. An application will run on the IOP to modify the contents of the memory buffer in the PS DRAM. \n",
     "\n",
     "In a similar way, another IP in the PL can use a physical memory pointer to access PS DRAM. "
    ]
@@ -15,43 +15,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create an instance of Xlnk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pynq import Xlnk\n",
-    "xlnk = Xlnk()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Check the status of the mmu\n",
-    "\n",
-    "*cma_stats()* can be used to get the status of the Xlnk instance. Xlnk can only allocate memory if sufficient space is available. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xlnk.cma_stats()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Allocate memory buffer\n",
-    "The cma_array() function in Xlnk creates a contiguous memory buffer. The buffer can be used from Python. Python is running on Linux, and will access the buffer via a virtual memory address. This is transparent to the user at the Python level. The Xlnk  function cma_get_phy_addr() can be used to return the physical address. This physical address can be used by IP in the PL to access the same memory buffer in PS DRAM. "
+    "The allocate class creates a contiguous memory buffer. The buffer can be used from Python. Python is running on Linux, and will access the buffer via a virtual memory address. This is transparent to the user at the Python level. The `.physical_address` allocate attribute can be used to return the physical address. This physical address can be used by IP in the PL to access the same memory buffer in PS DRAM. "
    ]
   },
   {
@@ -60,8 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pynq import allocate\n",
     "import numpy as np \n",
-    "py_buffer = xlnk.cma_array(shape=(1000,), dtype=np.int32)"
+    "py_buffer = allocate(shape=(1000,), dtype=np.int32)"
    ]
   },
   {
@@ -71,6 +37,15 @@
     "### Check the memory buffer addresses\n",
     "\n",
     "The virtual address can be used by any application running in Linux. This could be a Python application, or a C/C++ or other application running in Linux. The Physical address can be passed to an IP block in an overlay."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"py_buffer physical address {}\".format(hex(py_buffer.physical_address)))"
    ]
   },
   {
@@ -106,7 +81,7 @@
    "outputs": [],
    "source": [
     "%%microblaze base.ARDUINO\n",
-    "void my_function(unsigned int physical_address, unsigned int length, unsigned int data) {\n",
+    "void my_function(unsigned int physical_address, unsigned int length, int data) {\n",
     "    int i;\n",
     "    int *mb_buffer;\n",
     "    \n",
@@ -124,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initialise the buffer with some values: "
+    "Initialize the buffer with some values: "
    ]
   },
   {
@@ -135,7 +110,7 @@
    "source": [
     "length = 20 \n",
     "for i in range(length):\n",
-    "    py_buffer[i] = i"
+    "    py_buffer[i] = i + 100"
    ]
   },
   {
@@ -160,7 +135,7 @@
    "source": [
     "## Write to buffer from IOP\n",
     "\n",
-    "Write the physical pointer address returned form the *mmu* Xlnk instance, along with an initialization value and a length. The IOP application will then write to the memory buffer."
+    "Write the physical pointer address returned form the allocate instance, along with an initialization value and a length. The IOP application will then write to the memory buffer."
    ]
   },
   {
@@ -169,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = 10\n",
+    "data = -11\n",
     "my_function(py_buffer.physical_address, length, data)"
    ]
   },
@@ -187,6 +162,22 @@
    "outputs": [],
    "source": [
     "py_buffer[0:length]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Free the memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del py_buffer"
    ]
   }
  ],
@@ -206,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
