--- a/Session_4/6_dma_tutorial.ipynb
+++ b/Session_4/6_dma_tutorial.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DMA tutorial: DMA to streamed interfaces\n",
+    "# DMA tutorial: DMA to stream interfaces\n",
     "\n",
-    "Overlay consists of two DMAs and an AXI Stream FIFO (input and output AXI stream interfaces). The FIFO represents an accelerator. A single DMA could be used with a read and write channel enabled, but for demonstration purposes, two different DMAs will be used. \n",
+    "This overlay consists of two DMAs and an AXI Stream FIFO (input and output AXI stream interfaces). The FIFO represents an accelerator. A single DMA could be used with a read and write channel enabled, but for demonstration purposes, two different DMAs will be used. \n",
     "\n",
     "* The first DMA with read channel enabled is connected from DDR to IP input stream (reading from DDR, and sending to AXI stream).\n",
     "* The second DMA has a write channel enabled and is connected to IP output stream to DDR (receiving from AXI stream, and writing to DDR memory).\n",
@@ -84,10 +84,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Read DMA\n",
+    "## 3. Read DMA\n",
     "We will read some data from memory, and write to FIFO in the following cells.\n",
     "\n",
-    "The first step is to create the a contiguous memory block. Xlnk will be used to allocate the buffer, and NumPy will be used to specify the type of the buffer. "
+    "The first step is to allocate the buffer. pynq.allocate will be used to allocate the buffer, and NumPy will be used to specify the type of the buffer. "
    ]
   },
   {
@@ -100,7 +100,6 @@
     "import numpy as np\n",
     "\n",
     "data_size = 100\n",
-    "\n",
     "input_buffer = allocate(shape=(data_size,), dtype=np.uint32)"
    ]
   },
@@ -162,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Write DMA\n",
+    "## 4. Write DMA\n",
     "Let's read the data back from FIFO stream, and write to MM memory. The steps are similar.\n",
     "\n",
     "We will prepare an empty array before reading data back from FIFO.\n",
@@ -208,6 +207,22 @@
    "source": [
     "for i in range(10):\n",
     "    print('0x' + format(output_buffer[i], '02x'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verify that the arrays are equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Array are equal: {}\".format(np.array_equal(input_buffer, output_buffer)))"
    ]
   },
   {
